// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows another candidate to be selected when 1 of 2 have been selected 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  margin: 0 0.25rem 1rem;
}

.c3 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c6 {
  text-align: left;
}

.c6:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c6:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c6 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: #028099;
  color: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c4 {
  text-align: left;
}

.c4:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c4:before {
  content: '✓';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: #028099;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c4 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c5 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c0 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c6 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

@media (min-width:480px) {
  .c4 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <fieldset
    class=""
  >
    <legend
      class="c0"
    >
      <small
        class="c1"
      >
        54th District
        <span
          class="visually-hidden"
        >
          .
        </span>
      </small>
      <div
        class="c2"
      >
        <h1>
          State Assembly
          <span
            class="visually-hidden"
          >
            .
          </span>
        </h1>
        <p>
          <strong>
            Vote for 
            2
            .
          </strong>
           You have selected
           
          1
          .
        </p>
      </div>
    </legend>
    <div
      class="c3"
    >
      <label
        class="c4"
        for="solis"
      >
        <input
          checked=""
          class="visually-hidden c5"
          id="solis"
          name="state-assembly"
          type="checkbox"
          value="solis"
        />
        <div
          class="c2"
        >
          <strong>
            Andrea Solis
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Federalist
        </div>
      </label>
      <label
        class="c6"
        for="keller"
      >
        <input
          class="visually-hidden c5"
          id="keller"
          name="state-assembly"
          type="checkbox"
          value="keller"
        />
        <div
          class="c2"
        >
          <strong>
            Amos Keller
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          People's
        </div>
      </label>
      <label
        class="c6"
        for="rangel"
      >
        <input
          class="visually-hidden c5"
          id="rangel"
          name="state-assembly"
          type="checkbox"
          value="rangel"
        />
        <div
          class="c2"
        >
          <strong>
            Davitra Rangel
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Liberty
        </div>
      </label>
      <button
        class="c6"
      >
        <div
          class="c2"
        >
          <em>
            add write-in candidate
          </em>
        </div>
      </button>
    </div>
  </fieldset>
</div>
`;

exports[`allows any candidate to be selected when no candidate is selected 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  margin: 0 0.25rem 1rem;
}

.c3 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c4 {
  text-align: left;
}

.c4:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c4:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c4 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c5 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c0 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c4 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <fieldset
    class=""
  >
    <legend
      class="c0"
    >
      <small
        class="c1"
      >
        54th District
        <span
          class="visually-hidden"
        >
          .
        </span>
      </small>
      <div
        class="c2"
      >
        <h1>
          State Assembly
          <span
            class="visually-hidden"
          >
            .
          </span>
        </h1>
        <p>
          <strong>
            Vote for 
            1
            .
          </strong>
           You have selected
           
          0
          .
        </p>
      </div>
    </legend>
    <div
      class="c3"
    >
      <label
        class="c4"
        for="solis"
      >
        <input
          class="visually-hidden c5"
          id="solis"
          name="state-assembly"
          type="checkbox"
          value="solis"
        />
        <div
          class="c2"
        >
          <strong>
            Andrea Solis
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Federalist
        </div>
      </label>
      <label
        class="c4"
        for="keller"
      >
        <input
          class="visually-hidden c5"
          id="keller"
          name="state-assembly"
          type="checkbox"
          value="keller"
        />
        <div
          class="c2"
        >
          <strong>
            Amos Keller
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          People's
        </div>
      </label>
      <label
        class="c4"
        for="rangel"
      >
        <input
          class="visually-hidden c5"
          id="rangel"
          name="state-assembly"
          type="checkbox"
          value="rangel"
        />
        <div
          class="c2"
        >
          <strong>
            Davitra Rangel
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Liberty
        </div>
      </label>
      <button
        class="c4"
      >
        <div
          class="c2"
        >
          <em>
            add write-in candidate
          </em>
        </div>
      </button>
    </div>
  </fieldset>
</div>
`;

exports[`displays warning if write-in candidate name is too long 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  margin: 0 0.25rem 1rem;
}

.c3 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c4 {
  text-align: left;
}

.c4:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c4:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c4 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c5 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c0 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c4 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <fieldset
    class=""
  >
    <legend
      class="c0"
    >
      <small
        class="c1"
      >
        Madison County
        <span
          class="visually-hidden"
        >
          .
        </span>
      </small>
      <div
        class="c2"
      >
        <h1>
          County Commissioners
          <span
            class="visually-hidden"
          >
            .
          </span>
        </h1>
        <p>
          <strong>
            Vote for 
            4
            .
          </strong>
           You have selected
           
          0
          .
        </p>
      </div>
    </legend>
    <div
      class="c3"
    >
      <label
        class="c4"
        for="argent"
      >
        <input
          class="visually-hidden c5"
          id="argent"
          name="county-commissioners"
          type="checkbox"
          value="argent"
        />
        <div
          class="c2"
        >
          <strong>
            Camille Argent
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Federalist
        </div>
      </label>
      <label
        class="c4"
        for="witherspoonsmithson"
      >
        <input
          class="visually-hidden c5"
          id="witherspoonsmithson"
          name="county-commissioners"
          type="checkbox"
          value="witherspoonsmithson"
        />
        <div
          class="c2"
        >
          <strong>
            Chloe Witherspoon-Smithson
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Federalist
        </div>
      </label>
      <label
        class="c4"
        for="bainbridge"
      >
        <input
          class="visually-hidden c5"
          id="bainbridge"
          name="county-commissioners"
          type="checkbox"
          value="bainbridge"
        />
        <div
          class="c2"
        >
          <strong>
            Clayton Bainbridge
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Federalist
        </div>
      </label>
      <label
        class="c4"
        for="hennessey"
      >
        <input
          class="visually-hidden c5"
          id="hennessey"
          name="county-commissioners"
          type="checkbox"
          value="hennessey"
        />
        <div
          class="c2"
        >
          <strong>
            Charlene Hennessey
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          People's
        </div>
      </label>
      <label
        class="c4"
        for="savoy"
      >
        <input
          class="visually-hidden c5"
          id="savoy"
          name="county-commissioners"
          type="checkbox"
          value="savoy"
        />
        <div
          class="c2"
        >
          <strong>
            Eric Savoy
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          People's
        </div>
      </label>
      <label
        class="c4"
        for="tawa"
      >
        <input
          class="visually-hidden c5"
          id="tawa"
          name="county-commissioners"
          type="checkbox"
          value="tawa"
        />
        <div
          class="c2"
        >
          <strong>
            Susan Tawa
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          People's
        </div>
      </label>
      <label
        class="c4"
        for="tawa-mary"
      >
        <input
          class="visually-hidden c5"
          id="tawa-mary"
          name="county-commissioners"
          type="checkbox"
          value="tawa-mary"
        />
        <div
          class="c2"
        >
          <strong>
            Mary Tawa
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          People's
        </div>
      </label>
      <label
        class="c4"
        for="rangel"
      >
        <input
          class="visually-hidden c5"
          id="rangel"
          name="county-commissioners"
          type="checkbox"
          value="rangel"
        />
        <div
          class="c2"
        >
          <strong>
            Damian Rangel
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Liberty
        </div>
      </label>
      <label
        class="c4"
        for="altman"
      >
        <input
          class="visually-hidden c5"
          id="altman"
          name="county-commissioners"
          type="checkbox"
          value="altman"
        />
        <div
          class="c2"
        >
          <strong>
            Valarie Altman
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Constitution
        </div>
      </label>
      <label
        class="c4"
        for="moore"
      >
        <input
          class="visually-hidden c5"
          id="moore"
          name="county-commissioners"
          type="checkbox"
          value="moore"
        />
        <div
          class="c2"
        >
          <strong>
            Helen Moore
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Constitution
        </div>
      </label>
      <label
        class="c4"
        for="white"
      >
        <input
          class="visually-hidden c5"
          id="white"
          name="county-commissioners"
          type="checkbox"
          value="white"
        />
        <div
          class="c2"
        >
          <strong>
            John White
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Whig
        </div>
      </label>
      <label
        class="c4"
        for="schmidt"
      >
        <input
          class="visually-hidden c5"
          id="schmidt"
          name="county-commissioners"
          type="checkbox"
          value="schmidt"
        />
        <div
          class="c2"
        >
          <strong>
            Joe Schmidt
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Whig
        </div>
      </label>
      <label
        class="c4"
        for="smith"
      >
        <input
          class="visually-hidden c5"
          id="smith"
          name="county-commissioners"
          type="checkbox"
          value="smith"
        />
        <div
          class="c2"
        >
          <strong>
            Joe Smith
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Whig
        </div>
      </label>
      <label
        class="c4"
        for="marracini"
      >
        <input
          class="visually-hidden c5"
          id="marracini"
          name="county-commissioners"
          type="checkbox"
          value="marracini"
        />
        <div
          class="c2"
        >
          <strong>
            Amanda Marracini
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Labor
        </div>
      </label>
      <label
        class="c4"
        for="schreiner"
      >
        <input
          class="visually-hidden c5"
          id="schreiner"
          name="county-commissioners"
          type="checkbox"
          value="schreiner"
        />
        <div
          class="c2"
        >
          <strong>
            Martin Schreiner
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Independent
        </div>
      </label>
      <button
        class="c4"
      >
        <div
          class="c2"
        >
          <em>
            add write-in candidate
          </em>
        </div>
      </button>
    </div>
  </fieldset>
</div>
`;

exports[`doesn't allow other candidates to be selected when 1 of 1 candidates have been selected 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  margin: 0 0.25rem 1rem;
}

.c3 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c6 {
  text-align: left;
}

.c6:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c6:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c6 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: #028099;
  color: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c4 {
  text-align: left;
}

.c4:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c4:before {
  content: '✓';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: #028099;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c4 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c5 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c0 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c6 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

@media (min-width:480px) {
  .c4 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <fieldset
    class=""
  >
    <legend
      class="c0"
    >
      <small
        class="c1"
      >
        54th District
        <span
          class="visually-hidden"
        >
          .
        </span>
      </small>
      <div
        class="c2"
      >
        <h1>
          State Assembly
          <span
            class="visually-hidden"
          >
            .
          </span>
        </h1>
        <p>
          <strong>
            Vote for 
            1
            .
          </strong>
           You have selected
           
          1
          .
        </p>
      </div>
    </legend>
    <div
      class="c3"
    >
      <label
        class="c4"
        for="solis"
      >
        <input
          checked=""
          class="visually-hidden c5"
          id="solis"
          name="state-assembly"
          type="checkbox"
          value="solis"
        />
        <div
          class="c2"
        >
          <strong>
            Andrea Solis
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Federalist
        </div>
      </label>
      <label
        class="c6"
        for="keller"
      >
        <input
          class="visually-hidden c5"
          disabled=""
          id="keller"
          name="state-assembly"
          type="checkbox"
          value="keller"
        />
        <div
          class="c2"
        >
          <strong>
            Amos Keller
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          People's
        </div>
      </label>
      <label
        class="c6"
        for="rangel"
      >
        <input
          class="visually-hidden c5"
          disabled=""
          id="rangel"
          name="state-assembly"
          type="checkbox"
          value="rangel"
        />
        <div
          class="c2"
        >
          <strong>
            Davitra Rangel
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Liberty
        </div>
      </label>
    </div>
  </fieldset>
</div>
`;
